--- a/projects.html
+++ b/projects.html
@@ -1,118 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>Commercial Projects | TK Remodeling – Kansas City</title>
-<meta name="description" content="View commercial build-outs and tenant improvement projects by TK Remodeling. Serving Greater Kansas City and Johnson County, Kansas.">
+  <title>Commercial Projects | TK Remodeling – Kansas City</title>
+  <meta name="description" content="Commercial build-outs and tenant improvements by TK Remodeling. Serving Greater Kansas City and Johnson County, Kansas." />
 
-<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
+  <header class="site-header">
+    <div class="container">
+      <nav class="navbar">
+        <a class="brand" href="index.html">
+          <img src="logo-white.png" alt="TK Remodeling logo" />
+          <div class="brand-text">
+            <strong>TK Remodeling</strong>
+            <span>Licensed &amp; Insured General Contractor</span>
+          </div>
+        </a>
 
-<header class="site-header">
-  <div class="container">
-    <nav class="navbar">
-      <a class="brand" href="index.html">
-        <img src="logo-white.png" alt="TK Remodeling logo">
-        <div class="brand-text">
-          <strong>TK Remodeling</strong>
-          <span>Licensed & Insured General Contractor</span>
+        <div class="nav-links">
+          <a href="projects.html" aria-current="page" style="color:#fff;border-bottom-color:rgba(255,255,255,.5);">Commercial</a>
+          <a href="residential.html">Residential</a>
+          <a href="restoration.html">Restoration</a>
+          <a href="about.html">About</a>
+          <a class="cta" href="contact.html">Contact</a>
         </div>
-      </a>
-
-      <div class="nav-links">
-        <a href="projects.html" aria-current="page">Commercial</a>
-        <a href="residential.html">Residential</a>
-        <a href="restoration.html">Restoration</a>
-        <a href="about.html">About</a>
-        <a class="cta" href="contact.html">Contact</a>
-      </div>
-    </nav>
-  </div>
-</header>
-
-<main class="section">
-  <div class="container">
-
-    <h2>Commercial Projects</h2>
-    <p class="sub">
-      Structured tenant improvements and build-outs across Greater Kansas City and Johnson County.
-    </p>
-
-    <!-- PROJECT 1 -->
-    <div class="project">
-      <img src="project1.jpg" alt="Spa build-out project Kansas City">
-
-      <div class="project-info">
-        <h3>Luxury Nail Salon Build-Out</h3>
-        <p class="project-meta">Overland Park, KS • 4,500 SF</p>
-
-        <p>
-          Full interior build-out including high-density plumbing layout for 16 pedicure stations,
-          ventilation coordination, electrical upgrades, inspection sequencing, and clean turnover.
-        </p>
-
-        <ul>
-          <li>Tenant improvement from shell space</li>
-          <li>Plumbing & electrical coordination</li>
-          <li>Passed inspections on first review</li>
-        </ul>
-      </div>
+      </nav>
     </div>
+  </header>
 
-    <!-- PROJECT 2 -->
-    <div class="project">
-      <img src="project2.jpg" alt="Medical office tenant improvement Kansas City">
+  <main class="section">
+    <div class="container">
+      <h2>Commercial Projects</h2>
+      <p class="sub">
+        Tenant improvements and commercial build-outs across Greater Kansas City and Johnson County.
+      </p>
 
-      <div class="project-info">
-        <h3>Medical Office Tenant Improvement</h3>
-        <p class="project-meta">Olathe, KS • 6,200 SF</p>
+      <!-- PROJECT 1 -->
+      <section class="proj">
+        <div class="proj-head">
+          <div>
+            <h3>Luxury Nail Salon Build-Out</h3>
+            <p class="proj-meta">Overland Park, KS • 4,500 SF</p>
+          </div>
+          <a class="btn btn-ghost" href="contact.html">Request Similar Scope</a>
+        </div>
 
-        <p>
-          Interior reconfiguration, exam room build-out, MEP upgrades,
-          ADA compliance updates, and coordinated inspection management.
+        <div class="slider" data-slider>
+          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
+
+          <div class="slider-track" data-track>
+            <!-- Replace these with your real images -->
+            <img src="assets/projects/salon-01-start.jpg" alt="Nail salon build-out start" />
+            <img src="assets/projects/salon-02-mid.jpg" alt="Nail salon build-out during construction" />
+            <img src="assets/projects/salon-03-finish.jpg" alt="Nail salon build-out finished" />
+          </div>
+
+          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
+        </div>
+
+        <div class="proj-body">
+          <p>
+            Full interior build-out including high-density plumbing layout, ventilation coordination,
+            electrical upgrades, inspection sequencing, and clean turnover.
+          </p>
+          <ul class="proj-bullets">
+            <li>Tenant improvement from shell space</li>
+            <li>Plumbing + electrical trade coordination</li>
+            <li>Inspection-ready closeout and clean turnover</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- PROJECT 2 -->
+      <section class="proj">
+        <div class="proj-head">
+          <div>
+            <h3>Medical Office Tenant Improvement</h3>
+            <p class="proj-meta">Olathe, KS • 6,200 SF</p>
+          </div>
+          <a class="btn btn-ghost" href="contact.html">Request Similar Scope</a>
+        </div>
+
+        <div class="slider" data-slider>
+          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
+
+          <div class="slider-track" data-track>
+            <img src="assets/projects/medical-01-start.jpg" alt="Medical office start" />
+            <img src="assets/projects/medical-02-mid.jpg" alt="Medical office during construction" />
+            <img src="assets/projects/medical-03-finish.jpg" alt="Medical office finished" />
+          </div>
+
+          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
+        </div>
+
+        <div class="proj-body">
+          <p>
+            Interior reconfiguration, exam room build-out, MEP upgrades, ADA updates,
+            and coordinated inspection management.
+          </p>
+          <ul class="proj-bullets">
+            <li>Phased construction schedule</li>
+            <li>Code compliance + inspection coordination</li>
+            <li>Documented closeout</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- PROJECT 3 -->
+      <section class="proj">
+        <div class="proj-head">
+          <div>
+            <h3>Retail &amp; Convenience Build-Out</h3>
+            <p class="proj-meta">Lenexa, KS • 3,800 SF</p>
+          </div>
+          <a class="btn btn-ghost" href="contact.html">Request Similar Scope</a>
+        </div>
+
+        <div class="slider" data-slider>
+          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
+
+          <div class="slider-track" data-track>
+            <img src="assets/projects/retail-01-start.jpg" alt="Retail start" />
+            <img src="assets/projects/retail-02-mid.jpg" alt="Retail during construction" />
+            <img src="assets/projects/retail-03-finish.jpg" alt="Retail finished" />
+          </div>
+
+          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
+        </div>
+
+        <div class="proj-body">
+          <p>
+            Full tenant improvement including interior framing, finish work, lighting upgrades,
+            plumbing coordination, and city inspections.
+          </p>
+          <ul class="proj-bullets">
+            <li>Fast-track schedule</li>
+            <li>Trade sequencing and oversight</li>
+            <li>Clean turnover / CO readiness</li>
+          </ul>
+        </div>
+      </section>
+
+      <div class="card" style="margin-top:24px;">
+        <h3>Want a quote or site-walk?</h3>
+        <p style="margin:0;color:var(--muted);">
+          Send city, square footage, target timeline, and any plans/photos. We’ll respond with next steps.
         </p>
-
-        <ul>
-          <li>Phased construction schedule</li>
-          <li>Code compliance management</li>
-          <li>Inspection-ready documentation</li>
-        </ul>
+        <div style="height:12px;"></div>
+        <a class="btn btn-primary" href="contact.html">Request a Consultation</a>
       </div>
+
     </div>
+  </main>
 
-    <!-- PROJECT 3 -->
-    <div class="project">
-      <img src="project3.jpg" alt="Retail tenant improvement Kansas City">
-
-      <div class="project-info">
-        <h3>Retail & Convenience Build-Out</h3>
-        <p class="project-meta">Lenexa, KS • 3,800 SF</p>
-
-        <p>
-          Full tenant improvement including interior framing, finish work,
-          lighting upgrades, plumbing, and coordinated city inspections.
-        </p>
-
-        <ul>
-          <li>Fast-track schedule</li>
-          <li>Trade coordination & sequencing</li>
-          <li>Clean certificate-of-occupancy turnover</li>
-        </ul>
-      </div>
+  <footer class="footer">
+    <div class="container">
+      <small>© 2026 TK Remodeling. Commercial build-outs • Tenant improvements • KC + Johnson County, KS.</small>
     </div>
+  </footer>
 
-  </div>
-</main>
-
-<footer class="footer">
-  <div class="container">
-    <small>© 2026 TK Remodeling. Commercial General Contractor – Kansas City.</small>
-  </div>
-</footer>
-
+  <script src="projects.js"></script>
 </body>
 </html>
