--- a/index.html
+++ b/index.html
@@ -1,5 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "GeneralContractor",
+  "name": "TK Remodeling",
+  "url": "https://tkremodel.com",
+  "logo": "https://tkremodel.com/logo-white.png",
+  "description": "Licensed and insured general contractor serving Greater Kansas City and Johnson County, Kansas. Specializing in commercial build-outs, tenant improvements, spa and nail salon construction.",
+  "areaServed": [
+    {
+      "@type": "City",
+      "name": "Kansas City"
+    },
+    {
+      "@type": "City",
+      "name": "Overland Park"
+    },
+    {
+      "@type": "City",
+      "name": "Olathe"
+    },
+    {
+      "@type": "City",
+      "name": "Leawood"
+    },
+    {
+      "@type": "City",
+      "name": "Lenexa"
+    },
+    {
+      "@type": "City",
+      "name": "Prairie Village"
+    },
+    {
+      "@type": "City",
+      "name": "Mission"
+    },
+    {
+      "@type": "City",
+      "name": "Merriam"
+    }
+  ],
+  "serviceOffered": [
+    {
+      "@type": "Service",
+      "name": "Commercial Build-Outs"
+    },
+    {
+      "@type": "Service",
+      "name": "Tenant Improvements"
+    },
+    {
+      "@type": "Service",
+      "name": "Spa and Nail Salon Build-Outs"
+    },
+    {
+      "@type": "Service",
+      "name": "Medical Office Construction"
+    }
+  ]
+}
+</script>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
