--- a/index.html
+++ b/index.html
@@ -72,6 +72,27 @@
 
   <!-- ✅ THIS is where the stylesheet link goes -->
   <link rel="stylesheet" href="styles.css" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "GeneralContractor",
+  "name": "TK Remodeling",
+  "url": "https://tkremodel.com",
+  "logo": "https://tkremodel.com/logo-white.png",
+  "description": "Licensed and insured general contractor serving Greater Kansas City and Johnson County, Kansas. Specializing in commercial build-outs, tenant improvements, and spa & nail salon construction.",
+  "areaServed": [
+    { "@type": "City", "name": "Kansas City" },
+    { "@type": "City", "name": "Overland Park" },
+    { "@type": "City", "name": "Olathe" },
+    { "@type": "City", "name": "Leawood" },
+    { "@type": "City", "name": "Lenexa" },
+    { "@type": "City", "name": "Prairie Village" },
+    { "@type": "City", "name": "Mission" },
+    { "@type": "City", "name": "Merriam" }
+  ]
+}
+</script>
+
 </head>
 
 <body>
