--- a/index.html
+++ b/index.html
@@ -92,6 +92,62 @@
   ]
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What areas do you serve?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "TK Remodeling serves Greater Kansas City and Johnson County, Kansas, including Overland Park, Olathe, Leawood, Lenexa, Prairie Village, Mission, and Merriam."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What types of commercial projects do you specialize in?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "We specialize in commercial build-outs and tenant improvements, including office, medical, restaurant, retail, convenience, and spa/nail salon environments."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What project sizes are a good fit?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Typical commercial scopes are 2,000–10,000 square feet, depending on the space and the scope of work."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Do you handle permitting and inspections?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes. We coordinate code compliance and inspections as part of an inspection-ready delivery process, aligned with the project scope and jurisdiction requirements."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can you build a spa or nail salon build-out?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes. Spa and nail salon build-outs are a core environment we understand, including high-density plumbing needs, ventilation coordination, layout execution, and inspection flow."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do we get started?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Send your project city, approximate square footage, target timeline, and any plans or photos. We’ll respond with next steps for a consultation and site walk."
+      }
+    }
+  ]
+}
+</script>
 
 </head>
 
