--- a/index.html
+++ b/index.html
@@ -148,6 +148,17 @@
   ]
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "TK Remodeling",
+  "url": "https://tkremodel.com",
+  "logo": "https://tkremodel.com/logo-white.png",
+  "email": "contact@tkremodel.com",
+  "sameAs": []
+}
+</script>
 
 </head>
 
