--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@
   "sameAs": []
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [{
+    "@type": "ListItem",
+    "position": 1,
+    "name": "Home",
+    "item": "https://tkremodel.com/"
+  }]
+}
+</script>
 
 </head>
 
