--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,27 @@
   <meta name="description" content="Commercial build-outs and tenant improvements by TK Remodeling. Serving Greater Kansas City and Johnson County, Kansas." />
 
   <link rel="stylesheet" href="styles.css" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://tkremodel.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Commercial Projects",
+      "item": "https://tkremodel.com/projects.html"
+    }
+  ]
+}
+</script>
+
 </head>
 
 <body>
