--- a/index.html
+++ b/index.html
@@ -207,11 +207,14 @@
           <div>
             <div class="badge">Licensed • Insured • Commercial Focused</div>
 
-            <h1>Licensed &amp; Insured<br/>General Contractor</h1>
+            <h1>Kansas City General Contractor<br/>Licensed &amp; Insured</h1>
 
             <p class="lede">
               Serving Greater Kansas City and Johnson County, Kansas.
             </p>
+            <h2 style="margin:10px 0 0; font-size:18px; font-weight:700; color:rgba(255,255,255,.85);">
+              Commercial Tenant Improvement Contractor in Kansas City &amp; Johnson County, KS
+            </h2>
 
             <p class="lede">
               Delivering structured commercial build-outs and tenant improvements with disciplined scheduling and coordinated trades — built for projects that require coordination, not patchwork renovation.
