--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Kansas City General Contractor | TK Remodeling</title>
-  <meta name="description" content="Licensed & Insured General Contractor serving Greater Kansas City and Johnson County, Kansas. Commercial build-outs, tenant improvements, spa & nail salon build-outs, and restoration mitigation with full reconstruction." />
+  <title>Kansas City General Contractor | Commercial Tenant Improvements | TK Remodeling</title>
+  <meta name="description" content="Licensed & insured Kansas City general contractor specializing in commercial build-outs, tenant improvements, and spa & nail salon construction across Johnson County, KS.">
 
   <!-- ✅ THIS is where the stylesheet link goes -->
   <link rel="stylesheet" href="styles.css" />
@@ -289,6 +289,30 @@
         </div>
       </div>
     </section>
+</section>   <!-- whatever section ends above -->
+
+<section class="section">
+  <div class="container">
+    <h2>Commercial General Contractor Serving the Kansas City Metro</h2>
+    <p class="sub">
+      Delivering commercial build-outs and tenant improvements across the Kansas City metropolitan area — serving both Kansas and Missouri communities.
+    </p>
+
+    <div class="card" style="margin-bottom:20px;">
+      <h3>Kansas Cities Served</h3>
+      <p>
+        Overland Park • Olathe • Lenexa • Leawood • Prairie Village • Mission • Merriam • Shawnee • Roeland Park • Gardner • Spring Hill • De Soto • Basehor
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Missouri Cities Served</h3>
+      <p>
+        Kansas City, MO • North Kansas City • Liberty • Gladstone • Lee’s Summit • Independence • Blue Springs • Raytown • Grandview • Belton • Parkville • Platte City
+      </p>
+    </div>
+  </div>
+</section>
 
     <!-- FOOTER -->
     <footer class="footer">
