--- a/index.html
+++ b/index.html
@@ -313,6 +313,46 @@
     </div>
   </div>
 </section>
+    <section class="section">
+  <div class="container">
+    <h2>What Clients Say</h2>
+    <p class="sub">
+      Commercial build-outs delivered with coordination and follow-through.
+    </p>
+
+    <div class="grid-3">
+      <div class="card">
+        <p>
+          “From the first walk-through to final inspection, TK stayed organized and kept everything moving.
+          Our salon opened on schedule and passed inspection without issues.”
+        </p>
+        <p style="margin-top:12px; font-weight:700;">
+          — Salon Owner, Overland Park
+        </p>
+      </div>
+
+      <div class="card">
+        <p>
+          “They were straightforward, responsive, and clear about scope and timing.
+          No surprises — just solid execution.”
+        </p>
+        <p style="margin-top:12px; font-weight:700;">
+          — Medical Office Tenant, Olathe
+        </p>
+      </div>
+
+      <div class="card">
+        <p>
+          “You can tell they’re used to commercial work. Trades were coordinated well and the closeout process was clean.”
+        </p>
+        <p style="margin-top:12px; font-weight:700;">
+          — Retail Client, Lenexa
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- FOOTER -->
     <footer class="footer">
