--- a/residential.html
+++ b/residential.html
@@ -1,51 +1,178 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Residential | TK Remodeling</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<header class="topbar">
-  <div class="container">
-    <div class="nav">
-      <a class="brand" href="index.html">
-        <div class="mark">TK</div>
-        <div class="name">
-          <strong>TK Remodeling</strong>
-          <span>Licensed & Insured General Contractor</span>
+  <title>Residential Projects | TK Remodeling – Kansas City</title>
+  <meta name="description" content="Residential remodel projects by TK Remodeling. Serving the Kansas City metro with high-quality remodel execution and clean closeout." />
+
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Optional: Breadcrumb schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://tkremodel.com/" },
+      { "@type": "ListItem", "position": 2, "name": "Residential Projects", "item": "https://tkremodel.com/residential.html" }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <header class="site-header">
+    <div class="container">
+      <nav class="navbar">
+        <a class="brand" href="index.html">
+          <img src="logo-white.png" alt="TK Remodeling logo" />
+          <div class="brand-text">
+            <strong>TK Remodeling</strong>
+            <span>Licensed &amp; Insured General Contractor</span>
+          </div>
+        </a>
+
+        <div class="nav-links">
+          <a href="projects.html">Commercial</a>
+          <a href="residential.html" aria-current="page" style="color:#fff;border-bottom-color:rgba(255,255,255,.5);">Residential</a>
+          <a href="restoration.html">Restoration</a>
+          <a href="about.html">About</a>
+          <a class="cta" href="contact.html">Contact</a>
         </div>
-      </a>
-      <nav class="links">
-        <a href="projects.html">Commercial</a>
-        <a href="residential.html">Residential</a>
-        <a href="restoration.html">Restoration</a>
-        <a href="about.html">About</a>
-        <a href="contact.html" class="btn primary">Contact</a>
       </nav>
     </div>
-  </div>
-</header>
+  </header>
 
-<main class="section">
-  <div class="container">
-    <h2>Select Residential Projects</h2>
-    <p class="lead">
-      TK Remodeling accepts select large-scale residential remodels on a limited basis.
-      Projects are evaluated based on scope, timeline, and alignment with commercial scheduling commitments.
-    </p>
-  </div>
-</main>
+  <main class="section">
+    <div class="container">
+      <h2>Residential Remodel Projects</h2>
+      <p class="sub">
+        High-quality home remodel execution with clean closeout. Residential is a smaller portion of our work, handled with the same coordination and standards as our commercial projects.
+      </p>
 
-<footer class="footer">
-  <div class="container">
-    <div class="row">
-      <div>© 2026 TK Remodeling</div>
+      <!-- RESIDENTIAL PROJECT 1 -->
+      <section class="proj">
+        <div class="proj-head">
+          <div>
+            <h3>Full Home Remodel</h3>
+            <p class="proj-meta">Kansas City Metro • Whole-home scope</p>
+          </div>
+          <a class="btn btn-ghost" href="contact.html">Request a Remodel Consult</a>
+        </div>
+
+        <div class="slider" data-slider>
+          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
+
+          <div class="slider-track" data-track>
+            <!-- Replace these image paths later -->
+            <img src="assets/projects/resi-home-01-start.jpg" alt="Home remodel start" />
+            <img src="assets/projects/resi-home-02-mid.jpg" alt="Home remodel during construction" />
+            <img src="assets/projects/resi-home-03-finish.jpg" alt="Home remodel finished" />
+          </div>
+
+          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
+        </div>
+
+        <div class="proj-body">
+          <p>
+            Whole-home remodel with coordinated trades, schedule discipline, and a clean finish.
+          </p>
+          <ul class="proj-bullets">
+            <li>Demo + reconfiguration</li>
+            <li>MEP coordination as required</li>
+            <li>Finishes + punch + clean turnover</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- RESIDENTIAL PROJECT 2 -->
+      <section class="proj">
+        <div class="proj-head">
+          <div>
+            <h3>Kitchen &amp; Living Remodel</h3>
+            <p class="proj-meta">Kansas City Metro • Interior renovation</p>
+          </div>
+          <a class="btn btn-ghost" href="contact.html">Request a Remodel Consult</a>
+        </div>
+
+        <div class="slider" data-slider>
+          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
+
+          <div class="slider-track" data-track>
+            <img src="assets/projects/resi-kitchen-01-start.jpg" alt="Kitchen remodel start" />
+            <img src="assets/projects/resi-kitchen-02-mid.jpg" alt="Kitchen remodel during construction" />
+            <img src="assets/projects/resi-kitchen-03-finish.jpg" alt="Kitchen remodel finished" />
+          </div>
+
+          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
+        </div>
+
+        <div class="proj-body">
+          <p>
+            Kitchen/living transformation with clean sequencing and careful finish execution.
+          </p>
+          <ul class="proj-bullets">
+            <li>Cabinet/layout coordination</li>
+            <li>Lighting + electrical updates as needed</li>
+            <li>Finish quality + punch closeout</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- RESIDENTIAL PROJECT 3 -->
+      <section class="proj">
+        <div class="proj-head">
+          <div>
+            <h3>Bathroom Remodel</h3>
+            <p class="proj-meta">Kansas City Metro • Bathroom upgrade</p>
+          </div>
+          <a class="btn btn-ghost" href="contact.html">Request a Remodel Consult</a>
+        </div>
+
+        <div class="slider" data-slider>
+          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
+
+          <div class="slider-track" data-track>
+            <img src="assets/projects/resi-bath-01-start.jpg" alt="Bathroom remodel start" />
+            <img src="assets/projects/resi-bath-02-mid.jpg" alt="Bathroom remodel during construction" />
+            <img src="assets/projects/resi-bath-03-finish.jpg" alt="Bathroom remodel finished" />
+          </div>
+
+          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
+        </div>
+
+        <div class="proj-body">
+          <p>
+            Bathroom remodel with coordinated plumbing, waterproofing, and finish details.
+          </p>
+          <ul class="proj-bullets">
+            <li>Demo + prep + waterproofing</li>
+            <li>Plumbing + tile coordination</li>
+            <li>Final punch + clean turnover</li>
+          </ul>
+        </div>
+      </section>
+
+      <div class="card" style="margin-top:24px;">
+        <h3>Want a quote?</h3>
+        <p style="margin:0;color:var(--muted);">
+          Send your city, scope, timeline, and any photos. We’ll respond with next steps.
+        </p>
+        <div style="height:12px;"></div>
+        <a class="btn btn-primary" href="contact.html">Contact TK Remodeling</a>
+      </div>
+
     </div>
-  </div>
-</footer>
+  </main>
 
+  <footer class="footer">
+    <div class="container">
+      <small>© 2026 TK Remodeling. Serving the Kansas City metro.</small>
+    </div>
+  </footer>
+
+  <script src="projects.js"></script>
 </body>
 </html>
